Changes in quota-tools from 3.16 to 3.17
* fix bug in warnquota which could result in bogus hostname and domainname (anonymous reporter)
* implemented writing of messages that user got below hard/soft limits to quota_nld (Jan Kara)
* use PKG_CHECK_MODULES to check for DBUS (Ladislav Michnovic)
* Implement setting of charset for emails sent by warnquota (Michael Meskes)
* Added quota_nld to the list of installed programs (Jan Kara)
* some typos fixes (Matthew Boyle)
* fixed possible segfault when unpriviledged user run edquota (Matthew Boyle)
* fixed format strings to use "%llu" and "%lld" instead of "%Lu" and "%Ld" (Ladislav Michnovic)
* removed ssl, resolv, lber from the list of LDAP libraries since we don't need them directly (Jan Kara)
* added limits.h include to quota_nld (Jan Kara)
* fixed repquota to work with limits over 4 TB (Jan Kara, Michael Meier)

Changes in quota-tools from 3.15 to 3.16
* added information message about journaled quota to quotacheck (Jan Kara, Alex Tomas)
* added pointers to quota_nld and warnquota to some manpages (Jan Kara)
* ported quota_nld to libnl-1.1 (Jan Kara)
* let setquota batch mode accept comments and blank lines, add -c option (Jacky Bruno, Jan Kara)
* print more verbose list of compile options when --version specified (Jan Kara)
* quotaon(8) should work only on local filesystems (Ladislav Michnovic)
* made possible to use quota rpc in mixed NFSv3 and NFSv4 environments (Jan Kara) 
* fixed compilation with openLDAP library versions 2.1 and 2.2 (Jan Kara)
* always define allow_severity and deny_severity for older versions of libwrap (Martin Jacobs)
* cleaned up host_access() handling (Jan Kara)
* configure script now correctly reports checking of libwrap (Jan Kara)
* added MPFS to the list of supported filesystems (Dave Boone)
* all binaries are now stripped during installation (Jan Kara)
* updated Polish translations (Jakub Bogusz)
* fixed typo in a quotaon message (Jakub Bogusz)