@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.16 to 3.17
+* remove IMMUTABLE flag from quota file in quotacheck (Jan Kara)
 * fix bug in warnquota which could result in bogus hostname and domainname (anonymous reporter)
 * implemented writing of messages that user got below hard/soft limits to quota_nld (Jan Kara)
 * use PKG_CHECK_MODULES to check for DBUS (Ladislav Michnovic)
